--- a/tests/DemoWebShop.Tests/DemoWebShop.Tests.csproj
+++ b/tests/DemoWebShop.Tests/DemoWebShop.Tests.csproj
@@ -11,6 +11,10 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
@@ -24,4 +28,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Data\Json\*.json" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Config/appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+ </ItemGroup>
 </Project>
