Added allure report

--- a/src/DemoWebShop.Application/DemoWebShop.Application.csproj
+++ b/src/DemoWebShop.Application/DemoWebShop.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Allure.NUnit" Version="2.12.1" />
     <PackageReference Include="CleanTest.Framework" Version="1.0.0" />
     <PackageReference Include="FluentAssertions" Version="8.0.0" />
   </ItemGroup>
